# slotmem_reader

./: Makefile.in  README.md  aclocal.m4  configure.in  reader.c  writer  writer.c
