
AC_INIT(reader.c)

dnl Save the configure parameters for lazy people like me
APR_CONFIG_NICE(config.nice)

dnl Absolute source/build directories
abs_srcdir=`(cd $srcdir && pwd)`
abs_builddir=`pwd`

AC_ARG_WITH(apxs,
[  --with-apxs=[FILE]     Path to Apache's apxs (default from PATH)],
[
    if test "$withval" = "yes"; then
        AC_MSG_ERROR([--with-apxs takes the full path to apxs])
    elif test "$withval" = "no"; then
        AC_MSG_ERROR([apxs support can not be disabled])
    else
        APXS="$withval"
    fi
],[
    APXS=apxs
])

APXS_HTTPD=`$APXS -q SBINDIR`/`$APXS -q TARGET`

# Test that we're trying to configure with apache 2.x
# (code borrowed from PHP)
APACHE_VERSION=`$APXS_HTTPD -v | head -1 | cut -f3 -d' ' | cut -f2 -d'/' | cut -f1 -d'-' | awk 'BEGIN { FS = "."; } { printf "%d", ($1 * 1000 + $2) * 1000 + $3;}'`
if test "$APACHE_VERSION" -le 2000000; then
    AC_MSG_ERROR([path to Apache 2's apxs required (see --with-apxs)])
fi

$APXS -q CFLAGS >/dev/null 2>&1
if test "$?" != "0"; then
    AC_MSG_ERROR([Error executing apxs])
fi

APACHE_CFLAGS=`$APXS -q CFLAGS`
APACHE_CPPFLAGS=`$APXS -q CPPFLAGS`
APACHE_LDFLAGS=`$APXS -q LDFLAGS`
exp_sbindir=`$APXS -q exp_sbindir`
exp_sysconfdir=`$APXS -q exp_sysconfdir`

AC_SUBST(APXS)
AC_SUBST(APACHE_CFLAGS)
AC_SUBST(APACHE_CPPFLAGS)
AC_SUBST(APACHE_LDFLAGS)

AC_OUTPUT(Makefile)
